--- a/static/css/forgotpassword.css
+++ b/static/css/forgotpassword.css
@@ -36,7 +36,7 @@ body {
 
 .mid-box{
     width: 100%;
-    he
+    height: 100vh;
     display: flex;
     align-items: center; 
     justify-content: center; 
@@ -53,10 +53,7 @@ body {
     border-radius: 10px;
     padding: 40px 40px;
 }
-.wrapper h1{
-    font-size: 36px;
-    text-align: center;
-}
+
 .wrapper.input-box{
     width: 100%;
     height: 50px;
@@ -128,13 +125,17 @@ body {
 }
 
 .text-name{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
+padding: 1px;
 
 }
 
 .lflu{
     margin: 2px;
+    font-size: 15px;
+}
+
+.h4warning{
+    color: red;
+    font-weight: 800;
+    margin-top: 15px;
 }
