--- a/templates/forgotpassword.html
+++ b/templates/forgotpassword.html
@@ -16,26 +16,30 @@
 
     <div class="mid-box">
         <div class="wrapper">
-            <form method="POST" action="/checkcred" onsubmit="return login_fun();">
+            <form method="POST" action="/forgotpassword/datafound" onsubmit="return forgot();">
 
                 <div class="text-name">
-                    <h1>Forgot Password </h1>
+                    <h2>Forgot Password </h2>
                 </div>
                 <br>
                 <div class="input-box">
-                    <label for="login-username" class="lflu">Enter your Username or Email</label>
+                    <label for="login-username" class="lflu">Enter your username or email</label>
                     <input type="text" required="required" id="login-username" name="login-username">
                 </div>
                 <br>
                 
                 <button type="submit" class="btn" data-translate>Next</button><br>
+
+                {% if message %}
+                    <h4 class="h4warning">Invalid username or email !</h4>
+                {% endif %}
             </form>
 
         </div>
 
     </div>
 
-    <script src="{{ url_for('static', filename='js/login.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/forgotpassword.js') }}"></script>
 </body>
 
 </html>
